@@ -1,3 +1,7 @@
+2007-09-16 Mathieu Blondel <mblondel@cvs.gnome.org>
+
+    * lib/fantasdic/ui/main_app.rb: Disable save if no definition found.
+
 2007-09-15 Mathieu Blondel <mblondel@cvs.gnome.org>
 
     * fantasdic.desktop: "Application" is not a valid category.
